# fastvla

./: .gitignore  CHANGES.md  COMPREHENSIVE_FIX_PLAN.md  CONTRIBUTING.md  DISTRIBUTED_TRAINING_FIXES.md  FIX_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  MIXED_PRECISION_FIXES.md  QUICK_REFERENCE.md  README.md  README_FIXES.md  README_ar_libero.md  README_ar_pusht.md  benchmark_models.py  branding_preview.html  finetune_on_modal.py  pyproject.toml  test_fixes.py  validate_fixes.py
docs/: ARCHITECTURE.md  QUICK_TEST.md  ROADMAP_AND_VISION.md  TESTING.md
examples/: benchmark_example.py  kaggle_distributed_example.py  train_example.py
fastvla/: __init__.py  benchmarking.py  config.py  exceptions.py  model.py  optimization.py  registry.py  training.py  utils.py
fastvla/adapters/: __init__.py  action_head.py  llm.py  vision.py
fastvla/data/: __init__.py  collator.py  datasets.py
fastvla/kernels/: __init__.py  action.py  action_head.py  cpu_fallbacks.py  fusion.py  multicam.py
notebooks/: FIX_SUMMARY.md  FastVLA_Colab_T4.ipynb  FastVLA_Kaggle_T4.ipynb  cell2_setup.py
readme_references/: bitsandbytes_readme.md  peft_readme.md  transformers_readme.md  trl_readme.md  unsloth_readme.md
scripts/: benchmark_gpu.py  benchmark_real_vla.py  convergence_proof.py  fetch_wandb.py  finetune_libero.py  finetune_openvla.py  finetune_pusht.py  finetune_real_deprecated.py  modal_arabic_dataset_factory.py  modal_arabic_pipeline.py  modal_evaluate.py  modal_finetune.py  modal_full_benchmark.py  modal_upload.py  quant_quality_bench.py  reliability_test.py  t4_recognition_benchmark.py  test_local_syntax.py  test_minimal.py  test_modal_training.py  test_pusht.py  translate_dataset.py  upload_pusht_modal.py  verify_full_kaggle.py  verify_kaggle_readiness.py  verify_notebook_api.py
tests/: conftest.py  run_dtype_tests.py  run_dtype_tests_standalone.py  test_api_compatibility.py  test_data.py  test_data_robustness.py  test_distributed_support.py  test_dtype_compatibility.py  test_e2e_training.py  test_fastvla_kernels.py  test_fastvla_total.py  test_fastvla_training.py  test_kernels.py  test_kernels_robustness.py  test_model.py  test_siglip_loading.py  test_training.py  test_training_robustness.py  test_triton_action.py
