[project]
name = "fastvla"
version = "0.1.8.0"
description = "A high-performance Vision-Language-Action (VLA) model fine-tuning library optimized for Tesla T4 hardware."
authors = [
    { name = "FastVLA Team", email = "hamza@fastvla.ai" }
]
dependencies = [
    "accelerate>=0.28.0",
    "bitsandbytes>=0.42.0",
    "numpy>=1.24.0,<2.0.0",
    "opencv-python>=4.7.0",
    "pillow>=10.0.0",
    "torch>=2.2.0",
    "transformers>=4.38.0",
    "datasets>=2.16.0",
    "torchvision>=0.17.0",
    "timm>=0.9.12",
    "typing-extensions>=4.8.0",
    "h5py>=3.10.0",
    "pandas>=1.5.0",
    "huggingface_hub>=0.26.0",
    "wandb>=0.25.1",
]
readme = "README.md"
requires-python = ">=3.10"
keywords = ["vla", "robotics", "openvla", "unsloth", "triton", "qlora"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.optional-dependencies]
gpu = [
    "triton>=2.2.0",
]
lora = [
    "peft>=0.9.0",
]
logging = [
    "wandb>=0.16.0",
]
all = [
    "fastvla[gpu,lora,logging]",
]

[project.urls]
Homepage = "https://github.com/BouajilaHamza/FastVLA"
Repository = "https://github.com/BouajilaHamza/FastVLA"
Documentation = "https://github.com/BouajilaHamza/FastVLA#readme"

[project.scripts]
fastvla-benchmark = "fastvla.benchmarking:main"
fastvla-train = "scripts.finetune_pusht:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["fastvla"]

[tool.uv.extra-build-dependencies]
    flash-attn = ["torch"]

[tool.uv.sources]
unsloth = { git = "https://github.com/unslothai/unsloth.git" }

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
]
